--- a/part2/index.html
+++ b/part2/index.html
@@ -2,18 +2,8 @@
 <head>
 	<script src="angular.js"></script>
 	<style>body{font-size:x-large;font-family:arial,verdana;}</style>
-<script>
-function MyController( $scope ) {
-	$scope.name = 'Jack';
-}
-</script>
 </head>
 
-<body ng-app ng-controller="MyController">
-<input type="text" ng-model="name" placeholder="Name">
-<p>
-	Hello {{name}}.
-</p>
-
+<body>
 </body>
 </html>
