--- a/part1/index.html
+++ b/part1/index.html
@@ -4,12 +4,7 @@
 <style>body{font-size:x-large;font-family:arial,verdana;}</style>
 </head>
 
-<body ng-app>
-<input type="text" ng-model="first" placeholder="First">
-<input type="text" ng-model="last" placeholder="Last">
-<p>
-	Hello {{first}} {{last}}.
-</p>
+<body>
 </body>
 
 </html>
